@@ -224,6 +224,7 @@ New features:
 --------------------------------------------------------------------------------
 Changes for 1.8.8rc3
 
+ - [ZBX-4157] fixed possible truncating of queries while preparing a configuration data for sending to a proxy (Sasha)
  - [ZBX-4150] fixed processing of quoted function parameters (Sasha)
 
 Changes for 1.8.8rc2
